--- a/src/main/resources/view/MainView.fxml
+++ b/src/main/resources/view/MainView.fxml
@@ -1,30 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.control.CheckMenuItem?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.polsl.informationtheory.fxml.controller.MainViewController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.polsl.informationtheory.fxml.controller.MainViewController">
    <center>
       <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
         <tabs>
-          <Tab text="Prawdopodobieństwo wystąpienia" >
+          <Tab text="Probability">
               <content>
-                  <fx:include fx:id="probabilityTab" source="ProbabilityView.fxml"/>
+                  <fx:include fx:id="probabilityTab" source="ProbabilityView.fxml" />
               </content>
           </Tab>
-          <Tab text="Entropia" >
+          <Tab text="Entropy">
               <content>
-                  <fx:include fx:id="entropyTab" source="EntropyView.fxml"/>
+                  <fx:include fx:id="entropyTab" source="EntropyView.fxml" />
               </content>
           </Tab>
-          <Tab text="Kompresja" >
+          <Tab text="Compression">
               <content>
-                  <fx:include fx:id="compressionTab" source="CompressionView.fxml"/>
+                  <fx:include fx:id="compressionTab" source="CompressionView.fxml" />
               </content>
           </Tab>
         </tabs>
@@ -33,34 +28,34 @@
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
-          <Menu mnemonicParsing="false" text="Plik">
+          <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem fx:id="openFileMenuButton" mnemonicParsing="false" onAction="#openFile" text="Otwórz plik" />
-                  <MenuItem fx:id="openFolderMenuButton" mnemonicParsing="false" onAction="#openFolder" text="Otwórz folder" />
+              <MenuItem fx:id="openFileMenuButton" mnemonicParsing="false" onAction="#openFile" text="Open file" />
+                  <MenuItem fx:id="openFolderMenuButton" mnemonicParsing="false" onAction="#openFolder" text="Open directory" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Edycja">
+          <Menu mnemonicParsing="false" text="Edit">
                 <items>
-                    <Menu mnemonicParsing="false" text="Sortuj">
+                    <Menu mnemonicParsing="false" text="Sort">
                         <items>
-                            <Menu mnemonicParsing="false" text="Ilość wystąpień">
+                            <Menu mnemonicParsing="false" text="Count">
                                 <items>
-                                    <CheckMenuItem onAction="#sortCountDecreasing" fx:id="sortCountDecreasing" text="Malejąco"/>
-                                    <CheckMenuItem onAction="#sortCountIncreasing" fx:id="sortCountIncreasing" text="Rosnąco"/>
+                                    <CheckMenuItem fx:id="sortCountDecreasing" onAction="#sortCountDecreasing" text="Descending" />
+                                    <CheckMenuItem fx:id="sortCountIncreasing" onAction="#sortCountIncreasing" text="Ascending" />
                                 </items>
                             </Menu>
-                            <Menu mnemonicParsing="false" text="Wyraz/Słowo">
+                            <Menu mnemonicParsing="false" text="Character/Word">
                                 <items>
-                                    <CheckMenuItem onAction="#sortIdentifierDecreasing" fx:id="sortIdentifierDecreasing" text="Malejąco"/>
-                                    <CheckMenuItem onAction="#sortIdentifierIncreasing" fx:id="sortIdentifierIncreasing" text="Rosnąco"/>
+                                    <CheckMenuItem fx:id="sortIdentifierDecreasing" onAction="#sortIdentifierDecreasing" text="Descending" />
+                                    <CheckMenuItem fx:id="sortIdentifierIncreasing" onAction="#sortIdentifierIncreasing" text="Ascending" />
                                 </items>
                             </Menu>
                         </items>
                     </Menu>
-                    <Menu mnemonicParsing="false" text="Znaki białe">
+                    <Menu mnemonicParsing="false" text="Whitespace characters">
                         <items>
-                            <CheckMenuItem onAction="#whitespaceCharDisplayUnicode" fx:id="whitespaceCharDisplayUnicode" text="Unicode"/>
-                            <CheckMenuItem onAction="#whitespaceCharDisplayLabel" fx:id="whitespaceCharDisplayLabel" text="Nazwa kodu"/>
+                            <CheckMenuItem fx:id="whitespaceCharDisplayUnicode" onAction="#whitespaceCharDisplayUnicode" text="Unicode" />
+                            <CheckMenuItem fx:id="whitespaceCharDisplayLabel" onAction="#whitespaceCharDisplayLabel" text="Code name" />
                         </items>
                     </Menu>
                 </items>
