--- a/src/main/resources/view/MainView.fxml
+++ b/src/main/resources/view/MainView.fxml
@@ -3,64 +3,69 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.polsl.informationtheory.fxml.controller.MainViewController">
-   <center>
-      <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
-        <tabs>
-          <Tab text="Probability">
-              <content>
-                  <fx:include fx:id="probabilityTab" source="ProbabilityView.fxml" />
-              </content>
-          </Tab>
-          <Tab text="Entropy">
-              <content>
-                  <fx:include fx:id="entropyTab" source="EntropyView.fxml" />
-              </content>
-          </Tab>
-          <Tab text="Compression">
-              <content>
-                  <fx:include fx:id="compressionTab" source="CompressionView.fxml" />
-              </content>
-          </Tab>
-        </tabs>
-      </TabPane>
-   </center>
-   <top>
-      <MenuBar BorderPane.alignment="CENTER">
-        <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem fx:id="openFileMenuButton" mnemonicParsing="false" onAction="#openFile" text="Open file" />
-                  <MenuItem fx:id="openFolderMenuButton" mnemonicParsing="false" onAction="#openFolder" text="Open directory" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-                <items>
-                    <Menu mnemonicParsing="false" text="Sort">
-                        <items>
-                            <Menu mnemonicParsing="false" text="Count">
-                                <items>
-                                    <CheckMenuItem fx:id="sortCountDecreasing" onAction="#sortCountDecreasing" text="Descending" />
-                                    <CheckMenuItem fx:id="sortCountIncreasing" onAction="#sortCountIncreasing" text="Ascending" />
-                                </items>
-                            </Menu>
-                            <Menu mnemonicParsing="false" text="Character/Word">
-                                <items>
-                                    <CheckMenuItem fx:id="sortIdentifierDecreasing" onAction="#sortIdentifierDecreasing" text="Descending" />
-                                    <CheckMenuItem fx:id="sortIdentifierIncreasing" onAction="#sortIdentifierIncreasing" text="Ascending" />
-                                </items>
-                            </Menu>
-                        </items>
-                    </Menu>
-                    <Menu mnemonicParsing="false" text="Whitespace characters">
-                        <items>
-                            <CheckMenuItem fx:id="whitespaceCharDisplayUnicode" onAction="#whitespaceCharDisplayUnicode" text="Unicode" />
-                            <CheckMenuItem fx:id="whitespaceCharDisplayLabel" onAction="#whitespaceCharDisplayLabel" text="Code name" />
-                        </items>
-                    </Menu>
-                </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-   </top>
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.polsl.informationtheory.fxml.controller.MainViewController">
+    <center>
+        <TabPane fx:id="tabPane" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+            <tabs>
+                <Tab fx:id="loadingTabComp" closable="false" text="Compression">
+                    <content>
+                        <fx:include fx:id="loadingTab" source="LoadingView.fxml" />
+                    </content>
+                </Tab>
+                <Tab fx:id="probabilityTabComp" closable="false" text="Probability">
+                    <content>
+                        <fx:include fx:id="probabilityTab" source="ProbabilityView.fxml" />
+                    </content>
+                </Tab>
+                <Tab fx:id="entropyTabComp" closable="false" text="Entropy">
+                    <content>
+                        <fx:include fx:id="entropyTab" source="EntropyView.fxml" />
+                    </content>
+                </Tab>
+                <Tab fx:id="compressionTabComp" closable="false" text="Compression">
+                    <content>
+                        <fx:include fx:id="compressionTab" source="CompressionView.fxml" />
+                    </content>
+                </Tab>
+            </tabs>
+        </TabPane>
+    </center>
+    <top>
+        <MenuBar useSystemMenuBar="true" BorderPane.alignment="CENTER">
+            <menus>
+                <Menu mnemonicParsing="false" text="File">
+                    <items>
+                        <MenuItem fx:id="openFileMenuButton" mnemonicParsing="false" onAction="#openFile" text="Open file" />
+                        <MenuItem fx:id="openFolderMenuButton" mnemonicParsing="false" onAction="#openFolder" text="Open directory" />
+                    </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Edit">
+                    <items>
+                        <Menu mnemonicParsing="false" text="Sort">
+                            <items>
+                                <Menu mnemonicParsing="false" text="Count">
+                                    <items>
+                                        <CheckMenuItem fx:id="sortCountDecreasing" onAction="#sortCountDecreasing" text="Descending" />
+                                        <CheckMenuItem fx:id="sortCountIncreasing" onAction="#sortCountIncreasing" text="Ascending" />
+                                    </items>
+                                </Menu>
+                                <Menu mnemonicParsing="false" text="Character/Word">
+                                    <items>
+                                        <CheckMenuItem fx:id="sortIdentifierDecreasing" onAction="#sortIdentifierDecreasing" text="Descending" />
+                                        <CheckMenuItem fx:id="sortIdentifierIncreasing" onAction="#sortIdentifierIncreasing" text="Ascending" />
+                                    </items>
+                                </Menu>
+                            </items>
+                        </Menu>
+                        <Menu mnemonicParsing="false" text="Whitespace characters">
+                            <items>
+                                <CheckMenuItem fx:id="whitespaceCharDisplayUnicode" onAction="#whitespaceCharDisplayUnicode" text="Unicode" />
+                                <CheckMenuItem fx:id="whitespaceCharDisplayLabel" onAction="#whitespaceCharDisplayLabel" text="Code name" />
+                            </items>
+                        </Menu>
+                    </items>
+                </Menu>
+            </menus>
+        </MenuBar>
+    </top>
 </BorderPane>
