--- a/src/main/resources/view/CompressionView.fxml
+++ b/src/main/resources/view/CompressionView.fxml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.BorderPane?>
-<?import org.controlsfx.control.SearchableComboBox?>
-
-<?import pl.polsl.informationtheory.fxml.component.LatexPaneView?>
-<BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.polsl.informationtheory.fxml.controller.CompressionViewController">
-
-</BorderPane>
+<?import javafx.scene.layout.VBox?>
+<VBox xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
+      fx:id="compressionVBox" fx:controller="pl.polsl.informationtheory.fxml.controller.CompressionViewController">
+    <ListView fx:id="compressionSummary" prefWidth="200.0" BorderPane.alignment="CENTER"/>
+</VBox>
